--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
 
   <body>
+    <script src='https://kit.fontawesome.com/a07d05399.js'></script>
+    <div>
+      <a id="counter">ROCKS DODGED:</a>
+      <i style="color:tan; font-size:60px" class="fab fa-5x fa-algolia">test</i>
+    </div>
     <div id="game">
       <a id="start" href="javascript:start()">START</a>
       <div id="dodger" style="bottom: 0px; left: 180px;"></div>
