Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src='https://kit.fontawesome.com/a07d05399.js'></script>
     <div>
       <a id="counter">ROCKS DODGED:</a>
-      <i style="color:tan; font-size:60px" class="fab fa-5x fa-algolia">test</i>
+      <i style="color:tan; font-size:60px" class="fab fa-5x fa-algolia"></i>
     </div>
     <div id="game">
       <a id="start" href="javascript:start()">START</a>
